--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentTags.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentTags.html
@@ -6,11 +6,12 @@
       <label for="newTagKey" class="col-xs-12 row"><span class="text-fit">Tags</span></label>
       <div class="tags-container form-group row col-xs-12" ng-class="{'noTags':tags.length==0}">
         <div class="btn-group btn-group-xs" role="group"  ng-repeat="tag in tags track by $index"  ng-mouseenter="showDelete[$index] = true" ng-mouseleave="showDelete[$index] = false"  ng-class="{'match': tagMatch(tag)}">
-          <button type="button" class="btn btn-default tag" ng-click="toggleTag(tag)">
+          <button type="button" class="btn btn-default tags-label" ng-click="toggleTag(tag)">
+            <i class="fa fa-tag"></i>
             <span class="tag-key">{{tag.key}}</span>
             <span class="tag-separator">=</span>
             <span class="tag-value">{{tag.value}}</span>
-            <span class="fa fa-search"></span>
+            <span class="fa fa-search-plus"></span>
           </button>
           <button ng-if="isEditForm && showDelete[$index]" type="button" class="btn btn-default" ng-click="removeTag($index)"><span class="fa fa-times text-danger"></span></button>
         </div>
