Fixes #16937: Keep the original name of a Generic Method displayed

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -73,6 +73,9 @@ ul.dropdown-menu > li > a{
 .popover{
   max-width: 450px;
 }
+.popover.condition {
+  left: -250px !important;
+}
 .popover-content b{
   color: #f08004;
 }
