--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
@@ -5,7 +5,7 @@
 
          <lift:authz role="node_write">
            <div class="col-lg-7 col-md-8 col-xs-12 add-prop-form">
-             <label for="newPropName">Add node property</label>
+             <label for="newPropName">Add a new property:</label>
              <form name="newPropForm">
                <table id="addPropTable">
                  <tbody>
