--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
@@ -68,8 +68,11 @@
                  <td ng-class="{'is-edited':isEdited(property.name)}">
                    <div ng-if="!isEdited(property.name)">
                      {{ property.name }}
-                     <span ng-if="property.provider !== undefined" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This node property is managed by its provider <b>‘{{ property.provider }}</b>’, and can not be modified manually. Check Rudder’s settings to adjust this provider’s configuration.">
+                     <span ng-if="property.provider !== undefined && property.provider !== 'inherited'" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This node property is managed by its provider <b>‘{{ property.provider }}</b>’, and can not be modified manually. Check Rudder’s settings to adjust this provider’s configuration.">
                        {{ property.provider }}
+                     </span>
+                     <span ng-if="property.parents !== undefined" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This node property is managed inherited from these group or global parameters: <b>‘{{ property.parents }}</b>’.">
+                       inherited
                      </span>
                    </div>
                    <div ng-if="isEdited(property.name)">
