Fixes #17238: Display technique description in directive form as markdown

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentDirectiveEditForm.html
@@ -85,6 +85,12 @@
               <div id="longDescriptionFieldPreviewMarkdown" class=" col-xs-12 row markdown"></div>
             </div>
           </div>
+          <div >
+            <label class="wbBaseFieldLabel"><span class="text-fit">Technique documentation</span></label>
+            <div class="markdown">
+              <div id="techniqueDescription"></div>
+            </div>
+          </div>
           <div id="priority">
             Here come the priority field
           </div>
@@ -118,12 +124,6 @@
                 <div id="techniqueName">
                   Technique name
                 </div>
-            </div>
-            <div class="directiveTechnicalInfo row wbBaseField form-group">
-              <label>Technique description</label>
-              <div id="techniqueDescription" class="fake-form-control textarea readonly">
-                Technique description
-              </div>
             </div>
             <div class="directiveTechnicalInfo row wbBaseField form-group">
               <label>Technique unicity</label>
