Fixes #17290: RuleID is not trimmed when copied from the GUI

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -120,10 +120,8 @@
 
 
    <div class="row wbBaseField form-group">
-      <label class="col-xs-12 rule-info">Rudder ID</label>
-      <div class="col-xs-12">
-        <span id="rudderID"> Here comes the rudder ID </span>
-      </div>
+      <label class="col-xs-12 rule-info">Rule ID</label>
+      <div class="col-xs-12"><span id="ruleID">Here comes the rule ID</span></div>
     </div>
     <hr/>
 	</div>
