--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -2035,6 +2035,47 @@ form.rudder-form .policymode-group .btn-group .btn.enforce.active{
   background-color: #9bc832;
 }
 
+/* CHECKBOX BUTTONS */
+.checkbox-group label.radio-inline,
+.checkbox-group input + span{
+  padding: 0;
+  margin: 0;
+}
+.checkbox-group input{
+  display: none !important;
+}
+.checkbox-group input + span > span{
+  border: 1px solid #ddd;
+  background-color: #f4f4f4;
+  padding: 6px 12px;
+  margin: 0;
+  font-size: 14px;
+  display: inline-block;
+  min-width: 85px;
+  min-height: 35px;
+  text-align: center;
+}
+.checkbox-group input + span > span:hover{
+  border-color: #adadad;
+}
+.checkbox-group > label:first-child > input + span> span{
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-right: none;
+}
+.checkbox-group > label:last-child > input + span> span{
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-left: none;
+}
+.checkbox-group input:checked + span> span{
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.225);
+}
+.checkbox-group input:checked + span > span{
+  background-color: #337ab7;
+  color: #fff;
+}
+
 .group-help .input-group-btn .btn-check{
   width: 40px;
   position: relative;
