Fixes #17427: Separate System Rules from USer Defined Rules in Node compliance display

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
@@ -812,3 +812,6 @@ textarea.form-control, .content-wrapper textarea.form-control {
   opacity:0.5
 }
 
+.ui-widget-content a.text-danger {
+  color: #a94442;
+}
